syntax = "proto3";
package lbm.wasm.v1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "cosmwasm/wasm/v1/types.proto";

option go_package                      = "github.com/line/lbm-sdk/x/wasm/lbm/types";
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.equal_all)           = true;

// Params defines the set of wasm parameters.
message Params {
  option (gogoproto.goproto_stringer) = false;
  cosmwasm.wasm.v1.AccessConfig code_upload_access     = 1
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"code_upload_access\""];
  cosmwasm.wasm.v1.AccessType instantiate_default_permission = 2 [(gogoproto.moretags) = "yaml:\"instantiate_default_permission\""];
  uint64     gas_multiplier                 = 3 [(gogoproto.moretags) = "yaml:\"max_gas\""];
  uint64     instance_cost                  = 4 [(gogoproto.moretags) = "yaml:\"instance_cost\""];
  uint64     compile_cost                   = 5 [(gogoproto.moretags) = "yaml:\"compile_cost\""];
}
